force-app/main/default/objects/AAO_Map_Value__mdt/fields/AAO_Dimension__c.field-meta.xml
<CustomField>
    <fullName>AAO_Dimension__c</fullName>
    <description>Which map dimension this value belongs to, in AAO_P8Codes' own vocabulary: "buyer role" or "political". Support and sentiment are deliberately absent: they keep their counter arithmetic and a net zero reads Neutral, per the forty-fourth stamp, so ranking them would be a second mechanism for a question that already has one.</description>
    <label>Dimension</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>