force-app/main/default/objects/AAO_Map_Value__mdt/fields/AAO_Displayed_Label__c.field-meta.xml
<CustomField>
    <fullName>AAO_Displayed_Label__c</fullName>
    <description>What this org's map DISPLAYS for the stored value. Blank means the label and the stored value are the same word, which is our seed's default. Where they differ (production shows the stored Signature Approver as "Decision Maker and Approver"), this is how the org says so, and it is read by humans and by reports rather than by projection logic.</description>
    <label>Displayed Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>