force-app/main/default/objects/AAO_Map_Value__mdt/fields/AAO_Rank__c.field-meta.xml
<CustomField>
    <fullName>AAO_Rank__c</fullName>
    <description>Higher wins where more than one value is established. Blank means UNRANKED, which sorts below every ranked value and never causes a blank projection: a set of only unranked values writes the first in the vendor picklist's own order. Ranks are a methodology statement and belong in configuration an org can state, not in a constant only we can change.</description>
    <label>Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>