force-app/main/default/objects/AAO_Map_Value__mdt/fields/AAO_Stored_Value__c.field-meta.xml
<CustomField>
    <fullName>AAO_Stored_Value__c</fullName>
    <description>The value as the vendor picklist STORES it, which is the only thing our code ever reads or writes. Must match the picklist&apos;s stored value exactly; the displayed label is a separate field precisely because the two can differ.</description>
    <label>Stored Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>